# programmes

./: 1.c
GRAPHICS PROG/: Untitled1.c  Untitled1.cpp  graphic2.cpp  grpro.cpp
REVISION OF PROG/: 1.txt
REVISION OF PROG/armstrongno/: armstrongno.cbp  armstrongno.depend  armstrongno.layout  main.c
REVISION OF PROG/printprime/: main.c  printprime.cbp  printprime.depend
ang/: ang.cbp  ang.depend  main.c
angstrom/: angstrom.cbp  angstrom.depend  main.c
arraysum/: arraysum.depend  main.c
code1/: code1.cbp  code1.depend  main.c
countnodigit/: CMakeLists.txt  countnodigit.cbp  countnodigit.depend  countnodigit.layout  main.c  resource.rc
ellipse/: ellipse.depend  main.cpp
exp1/: exp1.depend  main.c
fibo/: fibo.depend  main.c
graphic1/: graphic1.cbp  graphic1.depend  main.cpp
greatestnoof3/: greatestnoof3.cbp  greatestnoof3.depend  main.c
hey/: hey.cbp  hey.depend  main.c
lab1/: lab1.depend  main.c
lab2/: lab2.depend  main.c
lab4/: lab4.depend  lab4.layout  main.c
output/: main.c  output.cbp
practice/fibo1/: main.c  (+2 more)
prang/: prang.cbp  prang.depend
primefactorisation/: primefactorisation.cbp
primefactors/: main.c  primefactors.cbp  primefactors.depend
primeno/: main.c  primeno.cbp  primeno.depend
remidsem/: main.c  remidsem.cbp  remidsem.depend
reverse/: main.c  reverse.depend
sound/: main.c  sound.cbp  sound.depend
soundesxp/: codechef1.c  main.cpp  soundesxp.cbp  soundesxp.depend
sudan/: main.c  sudan.cbp  sudan.depend
sumofarray/: sumofarray.cbp
sumofevendigits/: main.c  sumofevendigits.cbp
test/: main.c  test.depend
(+14 files in other folders)
